--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="descriptors">
       <ul>
         <li>Mood: Your mood in general. <em>(Bad - Neutral - Good)</em></li>
-        <li>Interest: How much you've been maintining interest in things you usually like. <em>(Disinterested - Neutral - Focused)</em></li>
+        <li>Interest: How much you've been maintining interest in things you usually like. <em>(Disinterested - Neutral - Interested)</em></li>
         <li>Energy: Your physical energy level. <em>(Tired - Neutral - Buzzing)</em></li>
         <li>Appetite: Appetite for food and drink. <em>(Undereating - Neutral - Overeating)</em></li>
         <li>Self worth: Feelings about your sense of worth. <em>(Low - Neutral - High)</em> </li>
@@ -56,7 +56,7 @@
         <li>Irritability: Degree of recent irritability. <em>(Not irritabile at all - Very irritable)</em></li>
         <li>Anxiety: Presence/intensity of anxiety. <em>(Calm - Extremely anxious)</em></li>
         <li>Insomnia: Difficulty with sleeping. <em>(Yes/No)</em></li>
-        <li>Suicidal ideation: Recently contemplated suicide. <em>(Yes/No)</em></li>
+        <li>Suicidal ideation: Having thoughts about death or dying. <em>(Yes/No)</em></li>
         <li>Brain fog: Difficulty concentrating or remembering things. <em>(Yes/No)</em></li>
       </ul>
       </div>
