--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>Sketch</title>
 
-    <link rel="stylesheet" type="text/css" href="style2.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
@@ -22,25 +22,25 @@
 
   <body>
 
-    <h1>How <em>are</em> you?</h1>
+    <h1>How are you?</h1>
 
     <div class="info">
       <p>
       Mental health isn't always easy to talk about. Putting feelings into words can be
-      inaccurate and frustrating. This is a tool that aims to help translate mental health
-      into something tangible that can be used to help understand our own mental health,
+      inaccurate and frustrating. <br>
+      <em>How are you?</em> is a tool that aims to translate mental state
+      into a pictogram that can be used to understand our own mental health,
       track our progress, and facilitate open discussion.
     </p>
     </div>
 
     <div class="instructions">
-      <p class="labeltype">Pictogram</p>
+      <p class="labeltype">Pictogram Generator</p>
       <ol>
-    <li>Scroll down to generate your mental health pictogram.</li>
-    <li>In the box below are some descriptors for the variables if you need some clarification.</li>
-    <li>Click the download button when you're done to get your pictogram.</li>
-    <li>DM the image to <a href="https://www.instagram.com/howareyoumh/" class="extlink">@howareyoumh</a> on Instagram with a short text response to: 'How are you?'</li>
-    <li>All submissions are posted completely anonymously.</li>
+    <li>Scroll down to generate your mental health pictogram and press the download button to save it to your computer.<br>
+    In the box below are some descriptors for the variables if you need some clarification.</li>
+    <li>DM the image to <a href="https://www.instagram.com/howareyoumh/" class="extlink">@howareyoumh</a> on Instagram with a short text response to the question <em>how are you?</em><br>
+       Your pictogram will be posted on the account completely anonymously.</li>
   </ol>
     </div>
       <!-- <p><em>For variables with negative values, -10 is worst, 0 is neutral, 10 is best.<br>
