--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       For variables with no negative values, 0 is absent, 10 is most intense.</em></p> -->
       <div class="descriptors">
       <ul>
+         <li>Day: Between sunrise and sunset.</li>
+        <li>Night: Between sunset and sunrise.</li>
         <li>Mood: Your mood in general. <em>(Bad - Neutral - Good)</em></li>
         <li>Interest: How much you've been maintining interest in things you usually like. <em>(Disinterested - Neutral - Interested)</em></li>
         <li>Energy: Your physical energy level. <em>(Tired - Neutral - Buzzing)</em></li>
