--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <ol>
     <li>Scroll down to generate your mental health pictogram and press the download button to save it to your computer.<br>
     In the box below are some descriptors for the variables if you need some clarification.</li>
-    <li>DM the image to <a href="https://www.instagram.com/howareyoumh/" class="extlink">@howareyoumh</a> on Instagram with a short text response to the question <em>how are you?</em><br>
-       Your pictogram will be posted on the account completely anonymously.</li>
+    <li>Send your pictogram to <a href="https://www.instagram.com/howareyoumh/" class="extlink">@howareyoumh</a> on Instagram or <a href="mailto:matturpani@gmail.com">matturpani@gmail.com</a> by email.<br>
+       Your submission will be posted on the Instagram account completely anonymously.</li>
   </ol>
     </div>
       <!-- <p><em>For variables with negative values, -10 is worst, 0 is neutral, 10 is best.<br>
