--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       <ol>
     <li>Scroll down to generate your mental health pictogram and press the download button to save it to your computer.<br>
     In the box below are some descriptors for the variables if you need some clarification.</li>
-    <li>Send your pictogram to <a href="https://www.instagram.com/howareyoumh/" class="extlink">@howareyoumh</a> on Instagram or <a href="mailto:matturpani@gmail.com">matturpani@gmail.com</a> by email. If you can, include a short text note answering the question, <em>how are you?<br>
+    <li>Send your pictogram to <a href="https://www.instagram.com/howareyoumh/" class="extlink">@howareyoumh</a> on Instagram or <a href="mailto:matturpani@gmail.com">matturpani@gmail.com</a> by email. <br>
+      If you can, include a short text note answering the question, <em>how are you?</em><br>
        Your submission will be posted on the Instagram account completely anonymously.</li>
   </ol>
     </div>
